--- a/apple.json
+++ b/apple.json
@@ -11,6 +11,16 @@
       "code":"1003",
       "version":"1.0.3",
       "status":"release"
+    },
+    {
+      "code":"1004",
+      "version":"1.0.4",
+      "status":"release"
+    },
+    {
+      "code":"1005",
+      "version":"1.0.5",
+      "status":"release"
     }
   ]
 }
