--- a/apple.json
+++ b/apple.json
@@ -1,6 +1,6 @@
 {
   "domainUrl":"",
-  "updateUrl":"http://appdown.zfpai.com/wanfeng_download/",
+  "updateUrl":"http://appdown.1016wan.com/wanfeng_download/",
   "branches":[
     {
       "code":"1001",
